# zmq-binding-benchmark

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  README.md  run_benchmark.sh
cpp/src/: local_lat.cpp  local_thr.cpp  remote_lat.cpp  remote_thr.cpp
docs/: SUMMARY.md  architecture.md  contributing.md  faq.md  methodology.md
docs/results/: analysis.md  benchmark_data.json  cpp-baseline.md  dotnet.md  nodejs.md
dotnet/: LocalLat.cs  LocalThr.cs  NetZmq.PerfTests.csproj  Program.cs  README.md  RemoteLat.cs  RemoteThr.cs  run_benchmark.sh
nodejs/: README.md  local-lat.js  local-thr.js  package.json  remote-lat.js  remote-thr.js  run_benchmark.sh
scripts/: README.md  compare.py  plot.py  run-all.sh  validate.sh
